--- a/gm-api/src/app/views/home/home.component.html
+++ b/gm-api/src/app/views/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="espaco-noticias" class="content-news">
     <div *ngFor="let noticias of listaNoticias" class="">
-        <img src="" alt="">
-        <h3>Title</h3>
-        <p>Description</p>
+        <img [src]="" alt="">
+        <h3>{{noticias.titulo}}</h3>
+        <p>{{noticias}}</p>
     </div>
 </div>
